kibana/kibana-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: kibana:5.2.0
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
        ports:
        - name: ui
          containerPort: 5601
