kibana/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  selector:
    app: kibana
  type: NodePort
  ports:
  - name: ui
    port: 5601
    targetPort: 5601
    protocol: TCP
